--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <title>Résumé Roaster</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js" defer></script>
+
+    <!-- Import Pixelify Sans or an alternative pixelated font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
