--- a/website/index.html
+++ b/website/index.html
@@ -15,14 +15,18 @@
 
 <body>
     <div class="wrapper">
-        <h1>Résumé Roaster</h1>
-        <p>Upload your résumé PDF — we’ll roast you and create a custom business card!</p>
 
+        <div class="header">
+
+            <h1>Résumé Roaster</h1>
+            <p>Upload your résumé PDF — we’ll roast you and create a custom business card!</p>
+        </div>
         <!-- Resume upload section -->
         <div class="upload-section">
             <input type="file" id="pdf-upload" accept="application/pdf">
             <button id="roast-button">Roast Me</button>
         </div>
+
 
         <!-- List for displaying the roasts -->
         <ul id="roast-list"></ul>
